--- a/src/test/resources/persistence-local.properties
+++ b/src/test/resources/persistence-local.properties
@@ -45,13 +45,13 @@ javax.persistence.jdbc.driver = org.h2.Driver
 javax.persistence.jdbc.url = jdbc:h2:tcp://127.0.0.1:9092/h2
 javax.persistence.jdbc.user = sa
 javax.persistence.jdbc.password = sa
-javax.persistence.jdbc.show_sql = true
+#javax.persistence.jdbc.show_sql = true
 
 # Eclipselink2.6 properties
 javax.persistence.provider = org.eclipse.persistence.jpa.PersistenceProvider
 eclipselink.logging.level = INFO
-eclipselink.logging.level.sql = FINE
-eclipselink.logging.parameters = true
+#eclipselink.logging.level.sql = FINE
+#eclipselink.logging.parameters = true
 eclipselink.target-database = HSQL
 #Supported platforms : JavaDB Derby Oracle MySQL4 PostgreSQL SQLServer DB2 DB2Mainframe Sybase H2 HSQL
 #Others available : Informix TimesTen Attunity SQLAnyWhere DBase Cloudscape PointBase
